Add cbButton Texts corrections

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
 			<p>Fundada em 2004, a OAI atende a milhares de assinantes em todo o Brasil, fornecendo serviços ao mercado residencial, rural e corporativo, com um atendimento exclusivo e tecnologia de ponta. Com constantes investimentos, a OAI amplia suas fronteiras a cada dia. </p>
 
-			<p>Contamos com uma infraestrutura própria, provendo acesso à Internet Banda Larga e Telefonia IP, via Rádio, Cabo UTP e Fibra Óptica (FTTx e Lan to Lan), nas cidades de Assis/SP, Echaporã/SP, Ibirarema/SP, Nossa Senhora Aparecida/PR, Nova Alexandria/SP, Oscar Bressane/SP, Palmital/SP e Platina/SP no estado de São Paulo e ADSL para todo o Estado de São de Paulo.</p>
+			<p>Contamos com uma infraestrutura própria, provendo acesso à Internet Banda Larga e Telefonia IP, via Rádio, Cabo UTP e Fibra Óptica (FTTx e Lan to Lan), nas cidades de Assis/SP, Echaporã/SP, Ibirarema/SP, Nossa Senhora Aparecida/PR, Nova Alexandria/SP, Oscar Bressane/SP, Palmital/SP e Platina/SP e ADSL para todo o Estado de São de Paulo.</p>
 
 		</div>
 
@@ -401,7 +401,7 @@
 
 		<a class="prices-more-select-area">
 
-			<span>Entre em contato para obter planos exclusivos!</span>
+			<span>Entre em contato para obter projetos especiais!</span>
 
 		</a>
 
@@ -415,13 +415,11 @@
 
 		<div class="text-history">
 
-			<h2 class="font-light-blue-a700">Projetos Especias</h2>
+			<h2 class="font-light-blue-a700">Projetos Especiais</h2>
 
-			<p>Nossas soluções estão ligadas a expertise que adquirimos ao longo dos anos, atendendo a diversas empresas do segmento de telecomunicações. Altamente preparada oferecemos soluções em planejamento e elaboração de projetos para construção, instalação e manutenção de redes e sistemas de telecomunicações em todo território nacional.</p>
+			<p>Nossas soluções estão ligadas a expertise que adquirimos ao longo dos anos, atendendo à diversas empresas do segmento de telecomunicações. A OAI é altamente preparada para oferecer soluções em planejamento e elaboração de projetos para construção, instalação e manutenção de redes e sistemas de telecomunicações em todo território nacional, assim como a elaboração e implantação de redes de fibra óptica (FTTX/FTTA/FTTH), metálica, canalizações subterrâneas, tecnologia ADSL e DTH. Serviços de infraestrutura de equipamentos como esteiramento, calhas, dutos e bastidores, instalação e testes de enlaces de rádio (faixa de 900 Mhz a 23 Ghz), modem óptico, Switch, roteadores, ampliação de centrais telefônicas e sistemas SDH, PDW, MUX, DWDM.</p>
 
-			<p>Elaboração e implantação de redes de fibra óptica (FTTX/FTTA/FTTH), metálica, canalizações subterrâneas, tecnologia ADSL e DTH. Serviços de infraestrutura de equipamentos como esteiramento, calhas, dutos e bastidores, instalação e testes de enlaces de rádio (faixa de 900 Mhz a 23 Ghz), modem óptico, Switch, roteadores, ampliação de centrais telefônicas e sistemas SDH, PDW, MUX, DWDM.</p>
-
-			<p>Engenharia de rádio frequência envolvendo equipamentos CDMA, 3G, GSM E LTE. controle e operações integradas de Call Center IP, interligação de equipamentos de comunicação de dados, implantação de Backbone, anéis e troncos ópticos para ampliar a capacidade de tráfego das redes de transmissão.</p>
+			<p>Oferecemos também engenharia de rádio frequência envolvendo equipamentos CDMA, 3G, GSM E LTE. controle e operações integradas de Call Center IP, interligação de equipamentos de comunicação de dados, implantação de Backbone, anéis e troncos ópticos para ampliar a capacidade de tráfego das redes de transmissão.</p>
 
 		</div>
 
@@ -960,6 +958,13 @@
 				</div>
 
 			</div>
+
+			<div class="special">
+				<input type="checkbox" name="tSpecial" id="cSpecial" value="SpecialProjects"> <span>Projeto Especial</span>
+			</div>
+			<!--<div class="special">
+				<input type="checkbox" name="tOthers" id="cOthers" value="Others"> Outros Assuntos
+			</div>-->
 
 			<div class="message">
 
