--- a/index.html
+++ b/index.html
@@ -309,23 +309,23 @@
 								</li>
 								<li>
 									<span class="title">6 MB</span>
-									<span class="description">Upload: 1.2mbps</span>
+									<span class="description">Upload: 1.2Mbps</span>
 								</li>
 								<li>
 									<span class="title">8 MB</span>
-									<span class="description">Upload: 1.6mbps</span>
+									<span class="description">Upload: 1.6Mbps</span>
 								</li>
 								<li>
 									<span class="title">10 MB</span>
-									<span class="description">Upload: 2mbps</span>
+									<span class="description">Upload: 2Mbps</span>
 								</li>
 								<li>
 									<span class="title">12 MB</span>
-									<span class="description">Upload: 3mbps</span>
+									<span class="description">Upload: 3Mbps</span>
 								</li>
 								<li>
 									<span class="title">15 MB</span>
-									<span class="description">Upload: 3.5mbps</span>
+									<span class="description">Upload: 3.5Mbps</span>
 								</li>
 							</ul>
 						</li>
@@ -360,27 +360,27 @@
 								</li>
 								<li>
 									<span class="title">6 MB</span>
-									<span class="description">Upload: 1.2mbps</span>
+									<span class="description">Upload: 1.2Mbps</span>
 								</li>
 								<li>
 									<span class="title">8 MB</span>
-									<span class="description">Upload: 1.6mbps</span>
+									<span class="description">Upload: 1.6Mbps</span>
 								</li>
 								<li>
 									<span class="title">10 MB</span>
-									<span class="description">Upload: 2mbps</span>
+									<span class="description">Upload: 2Mbps</span>
 								</li>
 								<li>
 									<span class="title">12 MB</span>
-									<span class="description">Upload: 3mbps</span>
+									<span class="description">Upload: 3Mbps</span>
 								</li>
 								<li>
 									<span class="title">15 MB</span>
-									<span class="description">Upload: 3.5mbps</span>
+									<span class="description">Upload: 3.5Mbps</span>
 								</li>
 								<li>
 									<span class="title">20 MB</span>
-									<span class="description">Upload: 4mbps</span>
+									<span class="description">Upload: 4Mbps</span>
 								</li>
 
 							</ul>
