Add a lot of things

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br" class="lato is-loading">
 <meta charset="utf-8"/>
-<title>OAI Telecom</title>
+<title>OAI Telecom | Conectando Pessoas</title>
 <meta name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
 <script src="dist/js/villa.min.js"></script>
 <link rel="stylesheet" href="dist/css/villa.min.css"/>
 <link rel="stylesheet" href="dist/css/mowe.css"/>
-<link rel="stylesheet" href="dist/css/oai.min.css"/>
+<link rel="stylesheet" href="dist/css/oai.css"/>
 <!--[if lt IE 9]>
 <link rel="stylesheet" type="text/css" href="dist/css/material-colors.css"/>
 <script src="dist/js/html5shiv.js"></script>
@@ -36,7 +36,7 @@
 <script type="text/javascript">
 	var map;
 	var centerPos = new google.maps.LatLng(-22.689642,-50.302541);
-	var zoomLevel = 11;
+	var zoomLevel = 10;
 	function initialize() {
 		var mapOptions = {
 			center: centerPos,
@@ -50,8 +50,8 @@
 
 		var locations = [
 			['assis', -22.661807,-50.4026562],
-			['cnp', -22.6074217,-50.0168386],
-			['cmota', -22.7444256,-50.4203003],
+//			['cnp', -22.6074217,-50.0168386],
+//			['cmota', -22.7444256,-50.4203003],
 			['echapora', -22.4296452,-50.2227159],
 			['ibirarema', -22.8148214,-50.0869049],
 			['nsparecida', -22.9683604,-50.268502],
@@ -117,7 +117,7 @@
 
 					</svg>
 
-					<span class="slogan">navegar é preciso</span>
+					<span class="slogan">conectando pessoas</span>
 
 				</a>
 
@@ -163,8 +163,8 @@
 
 		</footer>
 
-
 	</div>
+
 </div>
 
 <div class="hero font-white">
@@ -172,13 +172,13 @@
 	<style scoped="scoped">
 
 		.hero-background {
-			background-image: url('dist/img/photo-1452457750107-cd084dce177d.jpeg');
-			background-position: center 72%;
+			background-image: url('dist/img/largePhotos/photo-1445346366695-5bf62de05412.jpeg');
+			background-position: center bottom;
 		}
 
 		.hero-overlay {
-			background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,.6) 18%, transparent 36%, rgba(0,0,0,0.48) 100%);
-			background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,.6) 18%, transparent 36%, rgba(0,0,0,0.48) 100%);
+			background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,.6) 4%, transparent 36%, rgba(0,0,0,0.48) 100%);
+			background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,.6) 4%, transparent 36%, rgba(0,0,0,0.48) 100%);
 		}
 
 	</style>
@@ -239,9 +239,9 @@
 
 			<h3 class="font-light-blue-a700">O que vem à sua cabeça quando você ouve a palavra Internet?</h3>
 
-			<p>Para muitos, informação, para outros, trabalho, diversão, cultura e conhecimento. Para nós da OAI, a internet aproxima as pessoas, como nenhum outro meio de COMUNICAÇÃO, derrubando fronteiras e barreiras, com a liberdade de criar, se expressar e aparecer para o mundo, revelando maravilhas em pessoas comuns.</p>
+			<p>Para muitos, informação, para outros, trabalho, diversão, cultura e conhecimento. Para nós da OAI, a internet aproxima pessoas e as coisas, como nenhum outro meio de <strong>comunicação</strong>, derrubando fronteiras e barreiras, com a liberdade de criar, se expressar e aparecer para o mundo, revelando maravilhas em pessoas comuns.</p>
 
-			<p>É com essa motivação que trabalhamos a cada dia, inovando e expandindo para atender todo o potencial que nossos assinantes e colaboradores têm a oferecer, com os serviços de acesso à internet banda larga Residencial, Rural e Corporativo, conectando o mundo e aproximando pessoas.</p>
+			<p>Com essa motivação, trabalhamos a cada dia, inovando e expandindo para atender nossos assinantes, com os serviços de acesso à internet banda larga Residencial, Rural e Corporativo, conectando o mundo e aproximando pessoas e as coisas.</p>
 
 		</div>
 
@@ -259,9 +259,8 @@
 
 			<h3 class="font-light-blue-a700">Nossa história</h3>
 
-			<p>Fundada em 2004, a OAI atende a milhares de assinantes em todo o Brasil, fornecendo serviços ao mercado residencial, rural e corporativo, com um atendimento exclusivo e tecnologia de ponta. Com constantes investimentos, a OAI amplia suas fronteiras a cada dia. </p>
+			<p>Fundada em 2004, a OAI atende a milhares de assinantes em todo o Brasil, com enfâse no estado de São Paulo, fornecendo serviços ao mercado residencial, rural e corporativo, com um atendimento exclusivo e tecnologia de ponta. Com constantes investimentos, a OAI amplia suas fronteiras a cada dia. </p>
 
-			<p>Contamos com uma infraestrutura própria, provendo acesso à Internet Banda Larga e Telefonia IP, via Rádio, Cabo UTP e Fibra Óptica (FTTx e Lan to Lan), nas cidades de Assis/SP, Echaporã/SP, Ibirarema/SP, Nossa Senhora Aparecida/PR, Nova Alexandria/SP, Oscar Bressane/SP, Palmital/SP e Platina/SP no estado de São Paulo e ADSL para todo o Estado de São de Paulo.</p>
 
 		</div>
 
@@ -277,7 +276,7 @@
 
 			<h2>Conheça nossos Planos</h2>
 
-			<p class="lead">Para melhor atender nossos clientes, criamos planos de acesso adaptados a cada exigência e necessidade.</p>
+			<p class="lead">Para melhor atender nossos clientes, disponibilizamos planos de acesso adaptados a cada exigência e necessidade.</p>
 
 		</div>
 
@@ -322,7 +321,7 @@
 										<span>2 MB</span>
 
 									</span>
-									<span class="PricelistItem-description">Upload: 600kbps</span>
+									<span class="PricelistItem-description">Up: 600kbps</span>
 								</li>
 								<li class="PricelistItem">
 									<span class="PricelistItem-title">
@@ -330,7 +329,7 @@
 										<span>4 MB</span>
 
 									</span>
-									<span class="PricelistItem-description">Upload: 800kbps</span>
+									<span class="PricelistItem-description">Up: 800kbps</span>
 								</li>
 								<li class="PricelistItem">
 									<span class="PricelistItem-title">
@@ -338,7 +337,7 @@
 										<span>6 MB</span>
 
 									</span>
-									<span class="PricelistItem-description">Upload: 1.2mbps</span>
+									<span class="PricelistItem-description">Up: 1.2Mbps</span>
 								</li>
 								<li class="PricelistItem">
 									<span class="PricelistItem-title">
@@ -346,7 +345,7 @@
 										<span>8 MB</span>
 
 									</span>
-									<span class="PricelistItem-description">Upload: 1.6mbps</span>
+									<span class="PricelistItem-description">Up: 1.6Mbps</span>
 								</li>
 								<li class="PricelistItem">
 									<span class="PricelistItem-title">
@@ -354,7 +353,7 @@
 										<span>10 MB</span>
 
 									</span>
-									<span class="PricelistItem-description">Upload: 2mbps</span>
+									<span class="PricelistItem-description">Up: 2Mbps</span>
 								</li>
 								<li class="PricelistItem">
 									<span class="PricelistItem-title">
@@ -362,7 +361,7 @@
 										<span>12 MB</span>
 
 									</span>
-									<span class="PricelistItem-description">Upload: 3mbps</span>
+									<span class="PricelistItem-description">Up: 2.4Mbps</span>
 								</li>
 								<li class="PricelistItem">
 									<span class="PricelistItem-title">
@@ -370,7 +369,7 @@
 										<span>15 MB</span>
 
 									</span>
-									<span class="PricelistItem-description">Upload: 3.5mbps</span>
+									<span class="PricelistItem-description">Up: 3Mbps</span>
 								</li>
 							</ul>
 
@@ -386,7 +385,7 @@
 										<span>1 MB</span>
 
 									</span>
-									<span class="PricelistItem-description">Upload: 600kbps</span>
+									<span class="PricelistItem-description">Up: 600kbps</span>
 								</li>
 								<li class="PricelistItem">
 									<span class="PricelistItem-title">
@@ -394,7 +393,7 @@
 										<span>2 MB</span>
 
 									</span>
-									<span class="PricelistItem-description">Upload: 600kbps</span>
+									<span class="PricelistItem-description">Up: 600kbps</span>
 								</li>
 								<li class="PricelistItem">
 									<span class="PricelistItem-title">
@@ -402,7 +401,7 @@
 										<span>4 MB</span>
 
 									</span>
-									<span class="PricelistItem-description">Upload: 800kbps</span>
+									<span class="PricelistItem-description">Up: 800kbps</span>
 								</li>
 
 							</ul>
@@ -418,7 +417,7 @@
 										<span>4 MB</span>
 
 									</span>
-									<span class="PricelistItem-description">Upload: 800kbps</span>
+									<span class="PricelistItem-description">Up: 1.2Mbps</span>
 								</li>
 								<li class="PricelistItem">
 									<span class="PricelistItem-title">
@@ -426,7 +425,7 @@
 										<span>6 MB</span>
 
 									</span>
-									<span class="PricelistItem-description">Upload: 1.2mbps</span>
+									<span class="PricelistItem-description">Up: 1.8Mbps</span>
 								</li>
 								<li class="PricelistItem">
 									<span class="PricelistItem-title">
@@ -434,7 +433,7 @@
 										<span>8 MB</span>
 
 									</span>
-									<span class="PricelistItem-description">Upload: 1.6mbps</span>
+									<span class="PricelistItem-description">Up: 2.4Mbps</span>
 								</li>
 								<li class="PricelistItem">
 									<span class="PricelistItem-title">
@@ -442,7 +441,7 @@
 										<span>10 MB</span>
 
 									</span>
-									<span class="PricelistItem-description">Upload: 2mbps</span>
+									<span class="PricelistItem-description">Up: 3Mbps</span>
 								</li>
 								<li class="PricelistItem">
 									<span class="PricelistItem-title">
@@ -450,7 +449,7 @@
 										<span>12 MB</span>
 
 									</span>
-									<span class="PricelistItem-description">Upload: 3mbps</span>
+									<span class="PricelistItem-description">Up: 3.6Mbps</span>
 								</li>
 								<li class="PricelistItem">
 									<span class="PricelistItem-title">
@@ -458,7 +457,7 @@
 										<span>15 MB</span>
 
 									</span>
-									<span class="PricelistItem-description">Upload: 3.5mbps</span>
+									<span class="PricelistItem-description">Up: 4.5Mbps</span>
 								</li>
 								<li class="PricelistItem">
 									<span class="PricelistItem-title">
@@ -466,7 +465,7 @@
 										<span>20 MB</span>
 
 									</span>
-									<span class="PricelistItem-description">Upload: 4mbps</span>
+									<span class="PricelistItem-description">Up: 6Mbps</span>
 								</li>
 
 							</ul>
@@ -501,13 +500,13 @@
 
 		<div class="text-history">
 
-			<h2 class="font-light-blue-a700">Projetos Especias</h2>
+			<h2 class="font-light-blue-a700">Projetos Especiais</h2>
 
-			<p>Nossas soluções estão ligadas a expertise que adquirimos ao longo dos anos, atendendo a diversas empresas do segmento de telecomunicações. Altamente preparada oferecemos soluções em planejamento e elaboração de projetos para construção, instalação e manutenção de redes e sistemas de telecomunicações em todo território nacional.</p>
+			<p>Nossas soluções estão ligadas a expertise que adquirimos ao longo dos anos, atendendo a diversas empresas no segmento de telecomunicações. Altamente preparada oferecemos soluções em planejamento e elaboração de projetos para construção, instalação e manutenção de redes e sistemas de telecomunicações em todo território nacional.</p>
 
-			<p>Elaboração e implantação de redes de fibra óptica (FTTX/FTTA/FTTH), metálica, canalizações subterrâneas, tecnologia ADSL e DTH. Serviços de infraestrutura de equipamentos como esteiramento, calhas, dutos e bastidores, instalação e testes de enlaces de rádio (faixa de 900 Mhz a 23 Ghz), modem óptico, Switch, roteadores, ampliação de centrais telefônicas e sistemas SDH, PDW, MUX, DWDM.</p>
+			<p>Elaboração e implantação de redes de fibra óptica (FTTx/FTTa/FTTh/L2L), metálica, canalizações subterrâneas e tecnologia ADSL. Serviços de infraestrutura de equipamentos como esteiramento, calhas, dutos e bastidores, instalação e testes de enlaces de rádio (faixa de 900 Mhz a 23 Ghz), modem óptico, switch, roteadores e ampliação de centrais telefônicas (IP).</p>
 
-			<p>Engenharia de rádio frequência envolvendo equipamentos CDMA, 3G, GSM E LTE. controle e operações integradas de Call Center IP, interligação de equipamentos de comunicação de dados, implantação de Backbone, anéis e troncos ópticos para ampliar a capacidade de tráfego das redes de transmissão.</p>
+			<p>Engenharia de rádio frequência envolvendo equipamentos <em>Wireless</em>, CDMA, 3G, GSM e LTE, assim como controle e operações integradas de Call Center IP, interligação de equipamentos de comunicação de dados, implantação de Backbone, anéis e troncos ópticos para ampliar a capacidade de tráfego das redes de transmissão.</p>
 
 		</div>
 
@@ -519,7 +518,7 @@
 
 	<h2 class="font-light-blue-a700">Cidades Atendidas</h2>
 
-	<p>A OAI possui infra estrutura de ponta em várias cidades da região.<br/> Confira quais são elas:</p>
+	<p>A OAI possui infra estrutura moderna em várias cidades da região.<br/> Confira quais são elas:</p>
 
 	<div id="cities+" class="Cities">
 
@@ -625,7 +624,7 @@
 
 				<div class="OfficeItem-content">
 
-					<p class="OfficeItem-address">Cap. Francisco R. Garcia, 153, Centro, 19800-390</p>
+					<p class="OfficeItem-address">Cap. Francisco R. Garcia, 153, Centro, 19800-130</p>
 
 					<a href="https://www.google.com/maps/dir//R.+Cap.+Francisco+Rodrigues+Garc%C3%ADa,+153+-+San+Fernando+Valley,+Assis+-+SP,+19800-390,+Brasil/@-22.6619179,-50.4197305,17z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x9495399b9b9cacbf:0xf893f342243a017a!2m2!1d-50.4175418!2d-22.6619179" class="OfficeItem-button">
 
@@ -636,8 +635,8 @@
 
 					<div class="OfficeItemTimetable">
 
-						<p>Seg a Sex 08h as 18h</p>
-						<p>Sábado 08 as 13h</p>
+						<p>Seg à Sex 8 hs às 18 hs</p>
+						<p>Sábado 8 hs às 13 hs</p>
 
 					</div>
 
@@ -657,7 +656,7 @@
 
 				<div class="OfficeItem-content">
 
-					<p class="OfficeItem-address">Manoel Leão Rego, 153, Centro, 19970-000</p>
+					<p class="OfficeItem-address">Manoel Leão Rego, 108, Centro, 19970-000</p>
 
 					<a href="https://www.google.com/maps/dir//-22.7858815,-50.2231128/@-22.7870683,-50.2225335,17z/data=!4m2!4m1!3e0" class="OfficeItem-button">
 
@@ -668,8 +667,8 @@
 
 					<div class="OfficeItemTimetable">
 
-						<p>Seg a Sex 08h as 18h</p>
-						<p>Sábado 08 as 13h</p>
+						<p>Seg à Sex 8 hs às 18 hs</p>
+						<p>Sábado 8 hs às 13 hs</p>
 
 					</div>
 
@@ -819,7 +818,7 @@
 
 		<div class="ContactMethodsContent">
 
-			<div id="contact-method-phone" class="ContactMethods-item ContactMethods-item--phone">
+			<div id="contact-method-phone" class="ContactMethods-item ContactMethods-item--phone is-active">
 
 				<div class="ContactPhone">
 
@@ -838,7 +837,7 @@
 							<section class="ContactPhoneItem-content">
 
 								<span class="ContactPhoneItem-number">18 3421 2000</span>
-								<span class="ContactPhoneItem-title">Assis</span>
+								<span class="ContactPhoneItem-title"><strong>Assis</strong> e região</span>
 
 							</section>
 
@@ -855,7 +854,7 @@
 							<section class="ContactPhoneItem-content">
 
 								<span class="ContactPhoneItem-number">18 3351 9500</span>
-								<span class="ContactPhoneItem-title">Palmital</span>
+								<span class="ContactPhoneItem-title"><strong>Palmital</strong> e região</span>
 
 							</section>
 
@@ -872,7 +871,7 @@
 							<section class="ContactPhoneItem-content">
 
 								<span class="ContactPhoneItem-number">11 2626 3000</span>
-								<span class="ContactPhoneItem-title">São Paulo</span>
+								<span class="ContactPhoneItem-title"><strong>São Paulo</strong> e região metropolitana</span>
 
 							</section>
 
@@ -901,7 +900,7 @@
 
 			</div>
 
-			<div id="contact-method-mobile" class="ContactMethods-item ContactMethods-mobile is-active">
+			<div id="contact-method-mobile" class="ContactMethods-item ContactMethods-mobile">
 
 				<div class="ContactPhone">
 
@@ -1076,7 +1075,7 @@
 
 			<div id="contact-method-mail" class="ContactMethods-item ContactMethods-item--email">
 
-				<a href="mailto:site@oai.com.br">site@oai.com.br</a>
+				<a href="mailto:oai@oai.com.br">oai@oai.com.br</a>
 
 			</div>
 
@@ -1084,7 +1083,7 @@
 
 	</section>
 
-	<h4>Horários de atendimento</h4>
+	<h4>Horários de atendimento presencial*</h4>
 
 	<style scoped="scoped">
 
@@ -1116,18 +1115,24 @@
 			font-size: 2.5em;
 		}
 
+		.office-hours-ps {
+			font-size: .875em;
+		}
+
 	</style>
 
 	<div class="office-hours flex width-100 justify-around flex-wrap">
 		<div class="office-hour flex flex-column align-center hfont-white">
 			<span class="days">Seg/Sex</span>
-			<span class="hour">08:00 até 18:00</span>
+			<span class="hour">8 hs às 18 hs</span>
 		</div>
 		<div class="office-hour flex flex-column align-center hfont-white">
 			<span class="days">Sábado</span>
-			<span class="hour">08:00 até 13:00</span>
+			<span class="hour">8 hs às 13 hs</span>
 		</div>
 	</div>
+
+	<p class="office-hours-ps">*<em>Exceto domingos e feriados</em></p>
 
 </div>
 
@@ -1158,11 +1163,13 @@
 
 		<section class="FooterText">
 
-			<p>© 2004 - 2016 - OAI Telecom <br/><em>Todos os direitos reservados</em></p>
+			<p>© 2004 - 2016 - OAI<span style="font-size: .75em; transform: translateY(-12px);">®</span> Telecom <br/><em>Todos os direitos reservados</em></p>
 
-			<p>Cap. Francisco R. Garcia, 153, Centro, <br/>Assis, CEP 19800-390, Brasil</p>
+			<p>Cap. Francisco R. Garcia, 153, Centro, <br/><strong>Assis</strong>, CEP 19800-130, Brasil</p>
 
-			<section class="Social">
+			<p>Manoel Leão Rego, 108, Centro, <br/><strong>Palmital</strong>, CEP 19970-000, Brasil</p>
+
+			<!--<section class="Social">
 
 				<a href="fa" class="SocialItem">
 					<span>Facebook</span>
@@ -1172,7 +1179,7 @@
 					<span>LinkedIn</span>
 				</a>
 
-			</section>
+			</section>-->
 
 		</section>
 
@@ -1184,7 +1191,7 @@
 
 			<div id="footer-logo" class="FinalSlogan-logo FooterLogo"></div>
 
-			<span class="FinalSlogan-text">navegar é preciso</span>
+			<span class="FinalSlogan-text">original, autêntico e interativo</span>
 
 		</a>
 			
@@ -1250,7 +1257,7 @@
 			if (lat && lng)
 				map.setCenter(new google.maps.LatLng({lat: lat, lng: lng}));
 
-			map.setZoom(zoomLevel);
+			map.setZoom(16);
 
 		});
 
