Add new wallpaper

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script>
 
 	var heroBackground = document.createElement('img');
-	heroBackground.src = 'dist/img/photo-1452457750107-cd084dce177d.jpeg';
+	heroBackground.src = 'dist/img/largePhotos/photo-1445346366695-5bf62de05412.jpeg';
 
 	heroBackground.addEventListener('load', function () {
 
@@ -84,7 +84,7 @@
 
 <body class="navbar-fixed">
 
-<div class="navbar user-unselect">
+<div id="navbar" class="navbar user-unselect">
 	<div class="wide container">
 
 		<header class="bg-sm">
@@ -167,18 +167,18 @@
 
 </div>
 
-<div class="hero font-white">
+<div id="hero" class="hero font-white">
 
 	<style scoped="scoped">
 
+
 		.hero-background {
 			background-image: url('dist/img/largePhotos/photo-1445346366695-5bf62de05412.jpeg');
-			background-position: center bottom;
+			background-position: 0 60%;
 		}
-
 		.hero-overlay {
-			background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,.6) 4%, transparent 36%, rgba(0,0,0,0.48) 100%);
-			background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,.6) 4%, transparent 36%, rgba(0,0,0,0.48) 100%);
+			background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,.6) 4%, transparent 24%, rgba(0,0,0,0.60) 100%);
+			background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,.6) 4%, transparent 24%, rgba(0,0,0,0.60) 100%);
 		}
 
 	</style>
@@ -900,7 +900,7 @@
 
 			</div>
 
-			<div id="contact-method-mobile" class="ContactMethods-item ContactMethods-mobile">
+			<div id="contact-method-mobile" class="ContactMethods-item ContactMethods-item--mobile">
 
 				<div class="ContactPhone">
 
@@ -1449,6 +1449,27 @@
 
 	var contactMethods = new ContactMethods(document.getElementById('contact-methods'));
 	contactMethods.init();
+
+</script>
+
+<script>
+
+	var hero = document.getElementById('hero');
+	var navbar = document.getElementById('navbar');
+
+	var resizeHero = function() {
+
+		console.log(window.innerHeight);
+		console.log(navbar.offsetHeight);
+		console.log(window.innerHeight +  navbar.offsetHeight);
+
+		hero.style.height = ( window.innerHeight - navbar.offsetHeight ) + 'px';
+
+	};
+
+	resizeHero();
+
+	window.addEventListener('resize', resizeHero);
 
 </script>
 
