Add new wallpaper

--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
 
 			<p>Fundada em 2004, a OAI atende a milhares de assinantes em todo o Brasil, com enfâse no estado de São Paulo, fornecendo serviços ao mercado residencial, rural e corporativo, com um atendimento exclusivo e tecnologia de ponta. Com constantes investimentos, a OAI amplia suas fronteiras a cada dia. </p>
 
+			<p>Contamos com uma infraestrutura própria, provendo acesso à Internet Banda Larga e Telefonia IP, via Rádio, Cabo e Fibra Óptica (FTTx e L2L), nas cidades de Assis/SP, Echaporã/SP, Ibirarema/SP, Nossa Senhora Aparecida/PR, Nova Alexandria/SP, Oscar Bressane/SP, Palmital/SP e Platina/SP no estado de São Paulo e ADSL para todo o Estado de São de Paulo.</p>
 
 		</div>
 
