Alter Lat and Lon

--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
 		map = new google.maps.Map( document.getElementById("map-canvas"), mapOptions );
 
 		var locations = [
-			['assis', -22.661807,-50.4026562],
+			['assis', -22.6618791,-50.4175902],
 //			['cnp', -22.6074217,-50.0168386],
 //			['cmota', -22.7444256,-50.4203003],
-			['echapora', -22.4296452,-50.2227159],
-			['ibirarema', -22.8148214,-50.0869049],
-			['nsparecida', -22.9683604,-50.268502],
-			['nalexandria', -22.6985332,-50.3090133],
-			['obressane', -22.3153487,-50.2991],
-			['palmital', -22.7884344,-50.2516319],
-			['platina', -22.6324697,-50.2223892]
+			['echapora', -22.429305,-50.2045585],
+			['ibirarema', -22.8148214,-50.0745476],
+			['nsparecida', -22.9652546,-50.2681337],
+			['nalexandria', -22.6979809,-50.2918808],
+			['obressane', -22.3164616,-50.2831488],
+			['palmital', -22.7858947,-50.2232455],
+			['platina', -22.6338278,-50.2050002]
 		];
 
 		var image = 'img/icon.png';
@@ -260,7 +260,6 @@
 			<h3 class="font-light-blue-a700">Nossa história</h3>
 
 			<p>Fundada em 2004, a OAI atende a milhares de assinantes em todo o Brasil, com enfâse no estado de São Paulo, fornecendo serviços ao mercado residencial, rural e corporativo, com um atendimento exclusivo e tecnologia de ponta. Com constantes investimentos, a OAI amplia suas fronteiras a cada dia. </p>
-
 
 		</div>
 
@@ -540,7 +539,7 @@
 
 					<li class="CitiesItem">
 
-						<a class="CitiesItem-select-area" data-mapLat="-22.661807" data-mapLng="-50.4026562">Assis, SP</a>
+						<a class="CitiesItem-select-area" data-mapLat="-22.6618791" data-mapLng="-50.4175902">Assis, SP</a>
 
 					</li>
 
@@ -558,43 +557,43 @@
 
 					<li class="CitiesItem">
 
-						<a class="CitiesItem-select-area" data-mapLat="-22.4296452" data-mapLng="-50.2227159">Echaporã, SP</a>
+						<a class="CitiesItem-select-area" data-mapLat="-22.429305" data-mapLng="-50.2045585">Echaporã, SP</a>
 
 					</li>
 
 					<li class="CitiesItem">
 
-						<a class="CitiesItem-select-area" data-mapLat="-22.8148214" data-mapLng="-50.0869049">Ibirarema, SP</a>
+						<a class="CitiesItem-select-area" data-mapLat="-22.8148214" data-mapLng="-50.0745476">Ibirarema, SP</a>
 
 					</li>
 
 					<li class="CitiesItem">
 
-						<a class="CitiesItem-select-area" data-mapLat="-22.9683604" data-mapLng="-50.268502">Nossa Sra Aparecida, PR</a>
+						<a class="CitiesItem-select-area" data-mapLat="-22.9652546" data-mapLng="-50.2681337">Nossa Sra Aparecida, PR</a>
 
 					</li>
 
 					<li class="CitiesItem">
 
-						<a class="CitiesItem-select-area" data-mapLat="-22.6985332" data-mapLng="-50.3090133">Nova Alexandria, SP</a>
+						<a class="CitiesItem-select-area" data-mapLat="-22.6979809" data-mapLng="-50.2918808">Nova Alexandria, SP</a>
 
 					</li>
 
 					<li class="CitiesItem">
 
-						<a class="CitiesItem-select-area" data-mapLat="-22.3153487" data-mapLng="-50.2991">Oscar Bressane, SP</a>
+						<a class="CitiesItem-select-area" data-mapLat="-22.3164616" data-mapLng="-50.2831488">Oscar Bressane, SP</a>
 
 					</li>
 
 					<li class="CitiesItem">
 
-						<a class="CitiesItem-select-area" data-mapLat="-22.7884344" data-mapLng="-50.2516319">Palmital, SP</a>
+						<a class="CitiesItem-select-area" data-mapLat="-22.7858947" data-mapLng="-50.2232455">Palmital, SP</a>
 
 					</li>
 
 					<li class="CitiesItem">
 
-						<a class="CitiesItem-select-area" data-mapLat="-22.6324697" data-mapLng="-50.2223892">Platina, SP</a>
+						<a class="CitiesItem-select-area" data-mapLat="-22.6338278" data-mapLng="-50.2050002">Platina, SP</a>
 
 					</li>
 
